2005-12-20  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(gnl_composition_init), (gnl_composition_handle_message),
	(objects_stop_compare):
	Update to use GstBin::handle_message virtual method.
	Fix **stupid** bug in stop_compare GCompareFunc.
	* gnl/gnlobject.c: (gnl_object_class_init), (gnl_object_init),
	(gnl_object_handle_message):
	* gnl/gnlobject.h:
	Update to use GstBin::handle_message virtual method

2005-12-14  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (objects_start_compare),
	(objects_stop_compare):
	Returning the difference of 2 unsigned int, expecting the result
	to be negative is... somewhat idiotic :)

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(gnl_composition_add_object):
	* gnl/gnlfilesource.c: (gnl_filesource_class_init):
	* gnl/gnlobject.c: (gnl_object_class_init),
	(gnl_object_covers_func), (translate_message_segment_start),
	(translate_message_segment_done), (update_values):
	* gnl/gnloperation.c: (gnl_operation_class_init):
	* gnl/gnlsource.c: (gnl_source_class_init):
	GNonLin debugging category is now BOLD BLUE.
	Updated debugging statements with GST_TIME_FORMAT.

2005-12-12  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (compare_relink_stack):
	Whoops, don't unref too much.

2005-12-10  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_reset), (gnl_composition_sync_handler),
	(have_to_update_pipeline), (get_new_seek_event),
	(handle_seek_event), (gnl_composition_event_handler),
	(gnl_composition_ghost_pad_set_target), (objects_start_compare),
	(objects_stop_compare), (no_more_pads_object_cb),
	(compare_relink_stack), (update_pipeline),
	(gnl_composition_add_object):
	Implement better event handling and fix memory leaks.
	* gnl/gnlfilesource.c: (gnl_filesource_prepare):
	* gnl/gnlobject.c: (gnl_object_to_media_time),
	(gnl_media_to_object_time), (translate_incoming_seek),